--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.10",
+    "axios": "^1.1.3",
     "framer-motion": "^7.6.1",
     "next": "^13.0.0",
     "react": "^18.2.0",
